@@ -121,9 +121,6 @@ public:
     inline Proxy operator[]( int i ){
     	return static_cast< Vector<RTYPE>* >( this )->operator[]( i ) ;
     }
-    // inline Proxy operator()( int i, int j ){
-    // 	return static_cast< Vector<RTYPE>* >( this )->operator()( i, j ) ;
-    // }
     
     inline Proxy operator[]( int i ) const {
     	return static_cast< const Vector<RTYPE>* >( this )->operator[]( i ) ;
